# access-sdk

./: .gitignore  00-README.md  CMakeLists.txt  Doxyfile  README.md
access_auth_api/: CMakeLists.txt  README.md  auth.h  auth_helper.c
access_auth_api/flavours/ecdsa/: auth_client.c  auth_server.c
access_auth_api/implementations/libCrypto/: auth_client.c  auth_internal.h  auth_server.c  auth_utils.c
access_auth_api/implementations/tinyembedded/: asn_utils.h  auth_client.c  auth_debug.h  auth_internal.h  auth_utils.c
auth/: CMakeLists.txt  README.md  auth.c  auth.h  auth_logger.h
auth/cmd/: CMakeLists.txt  auth_cmd.c  auth_cmd.h
auth/eddsa/: CMakeLists.txt  auth_client.c  auth_helper.c  auth_helper.h  auth_internal.c  auth_internal.h  auth_logger.c  auth_server.c  auth_utils.c  eddsa.c  eddsa.h
auth/flavours/ecdsa/: asn_utils.h  auth_client.c  auth_internal.h  auth_server.c  auth_utils.c
auth/flavours/eddsa/: auth_debug.h  auth_utils.c  auth_utils.h
auth/flavours/rsa/: auth_server.c  auth_utils.h
auth/request/: auth_request.c  auth_request.h
auth/rsa/: CMakeLists.txt  auth_client.c  auth_debug.h  auth_internal.h  auth_logger.h  auth_utils.c
auth/tcpip/: CMakeLists.txt  client.c  client.h  server.c  server.h  tcpip.c  tcpip.h  tcpip_logger.c  tcpip_logger.h
auth/tcpip/tests/: CMakeLists.txt  tcpip_client_test.c  tcpip_client_test.h  tcpip_server_test.c  tcpip_server_test.h  tcpip_test.c  tcpip_test.h
auth/tests/: CMakeLists.txt  auth_client_test.c  auth_client_test.h  auth_server_test.c  auth_server_test.h  auth_test.c  auth_test.h
ccan/: CMakeLists.txt  config.h
ccan/ccan/a_star/: .d  a_star.o.d
ccan/ccan/aga/: .d  aga.o.d  bellman_ford.o.d  bfs.o.d  dfs.o.d  dijkstra.o.d
ccan/ccan/agar/: .d  agar.o.d
ccan/ccan/alignof/: .d
ccan/ccan/antithread/: .d  antithread.o.d
ccan/ccan/argcheck/: .d
ccan/ccan/asearch/: .d  asearch.o.d
ccan/ccan/asort/: .d  asort.o.d
ccan/ccan/asprintf/: .d  asprintf.o.d
ccan/ccan/autodata/: .d  autodata.o.d
ccan/ccan/avl/: .d  avl.o.d
ccan/ccan/base64/: .d  base64.o.d
ccan/ccan/bdelta/: .d  bdelta.o.d
ccan/ccan/bitmap/: .d  bitmap.o.d
ccan/ccan/block_pool/: .d  block_pool.o.d
ccan/ccan/breakpoint/: .d  breakpoint.o.d
ccan/ccan/btree/: .d  btree.o.d
ccan/ccan/build_assert/: .d
ccan/ccan/bytestring/: .d  bytestring.o.d
ccan/ccan/cast/: .d
ccan/ccan/ccan_tokenizer/: .d  ccan_tokenizer.o.d  charflag.o.d  dict.o.d  queue.o.d  read_cnumber.o.d  read_cstring.o.d
ccan/ccan/cdump/: .d  cdump.o.d
ccan/ccan/charset/: .d  charset.o.d
ccan/ccan/check_type/: .d
ccan/ccan/ciniparser/: .d  ciniparser.o.d  dictionary.o.d
ccan/ccan/compiler/: .d
ccan/ccan/container_of/: .d
ccan/ccan/coroutine/: .d  coroutine.o.d
ccan/ccan/cppmagic/: .d
ccan/ccan/cpuid/: .d  cpuid.o.d
ccan/ccan/crc/: .d  crc.o.d
ccan/ccan/crcsync/: .d  crcsync.o.d
ccan/ccan/daemon_with_notify/: .d  daemon_with_notify.o.d
ccan/ccan/daemonize/: .d  daemonize.o.d
ccan/ccan/darray/: .d
ccan/ccan/deque/: .d  deque.o.d
ccan/ccan/dgraph/: .d  dgraph.o.d
ccan/ccan/edit_distance/: .d  edit_distance.o.d  edit_distance_dl.o.d  edit_distance_lcs.o.d  edit_distance_lev.o.d  edit_distance_rdl.o.d
ccan/ccan/endian/: .d
ccan/ccan/eratosthenes/: .d  eratosthenes.o.d
ccan/ccan/err/: .d  err.o.d
ccan/ccan/failtest/: .d  failtest.o.d
ccan/ccan/fdpass/: .d  fdpass.o.d
ccan/ccan/foreach/: .d  foreach.o.d
ccan/ccan/generator/: .d  generator.o.d
ccan/ccan/grab_file/: .d  grab_file.o.d
ccan/ccan/hash/: .d  hash.o.d
ccan/ccan/heap/: .d  heap.o.d
ccan/ccan/htable/: .d  htable.o.d
ccan/ccan/idtree/: .d  idtree.o.d
ccan/ccan/ilog/: .d  ilog.o.d
ccan/ccan/intmap/: .d  intmap.o.d
ccan/ccan/invbloom/: .d  invbloom.o.d
ccan/ccan/io/: .d  io.o.d  poll.o.d
ccan/ccan/isaac/: .d  isaac.o.d  isaac64.o.d
ccan/ccan/iscsi/: .d  discovery.o.d  init.o.d  login.o.d  nop.o.d  pdu.o.d  scsi-command.o.d  scsi-lowlevel.o.d  socket.o.d
ccan/ccan/jacobson_karels/: .d
ccan/ccan/json/: .d  json.o.d
ccan/ccan/lbalance/: .d  lbalance.o.d
ccan/ccan/likely/: .d  likely.o.d
ccan/ccan/list/: .d  list.o.d
ccan/ccan/lpq/: .d  lpq.o.d
ccan/ccan/lqueue/: .d
ccan/ccan/lstack/: .d
ccan/ccan/md4/: .d  md4.o.d
ccan/ccan/mem/: .d  mem.o.d
ccan/ccan/minmax/: .d
ccan/ccan/net/: .d  net.o.d
ccan/ccan/noerr/: .d  noerr.o.d
ccan/ccan/objset/: .d
ccan/ccan/opt/: .d  helpers.o.d  opt.o.d  parse.o.d  usage.o.d
ccan/ccan/order/: .d  order.o.d
ccan/ccan/permutation/: .d  permutation.o.d
ccan/ccan/pipecmd/: .d  pipecmd.o.d
ccan/ccan/pr_log/: .d  pr_log.o.d
ccan/ccan/ptr_valid/: .d  ptr_valid.o.d
ccan/ccan/ptrint/: .d
ccan/ccan/pushpull/: .d  pull.o.d  push.o.d
ccan/ccan/rbtree/: .d  rbtree.o.d
ccan/ccan/rbuf/: .d  rbuf.o.d
ccan/ccan/read_write_all/: .d  read_write_all.o.d
ccan/ccan/rfc822/: .d  rfc822.o.d
ccan/ccan/rszshm/: .d  rszshm.o.d
ccan/ccan/short_types/: .d
ccan/ccan/siphash/: .d  siphash.o.d
ccan/ccan/sparse_bsearch/: .d  sparse_bsearch.o.d
ccan/ccan/str/: .d  debug.o.d  str.o.d
ccan/ccan/strgrp/: .d  strgrp.o.d
ccan/ccan/stringbuilder/: .d  stringbuilder.o.d
ccan/ccan/stringmap/: .d  stringmap.o.d
ccan/ccan/strmap/: .d  strmap.o.d
ccan/ccan/strset/: .d  strset.o.d
ccan/ccan/structeq/: .d
ccan/ccan/take/: .d  take.o.d
ccan/ccan/tal/: .d  tal.o.d
ccan/ccan/talloc/: .d  talloc.o.d
ccan/ccan/tally/: .d  tally.o.d
ccan/ccan/tap/: .d  tap.o.d
ccan/ccan/tcon/: .d
ccan/ccan/time/: .d  time.o.d
ccan/ccan/timer/: .d  timer.o.d
ccan/ccan/tlist/: .d
ccan/ccan/tlist2/: .d
ccan/ccan/ttxml/: .d  ttxml.o.d
ccan/ccan/typesafe_cb/: .d
ccan/ccan/version/: .d
ccan/ccan/xstring/: .d  xstring.o.d
ccan/tools/: ccan_depends  ccan_depends.d  ccan_dir.o.d  compile.o.d  depends.o.d  doc_extract  doc_extract-core.o.d  doc_extract.d  gcov.o.d  manifest.o.d  modfiles  modfiles.d  namespacize  namespacize.d  read_config_header.o.d  tools.o.d
ccan/tools/ccanlint/: async.o.d  ccanlint  (+3 more)
policy/pep/: CMakeLists.txt  pep.c
policy/tests/: CMakeLists.txt  policy_test.c
(+1783 files in other folders)
